[gd_scene load_steps=11 format=1]

[ext_resource path="res://Scripts/Recolectora.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Naves/Bouclier.png" type="Texture" id=2]
[ext_resource path="res://Sprites/BarraEnergiaUnder.png" type="Texture" id=3]
[ext_resource path="res://Sprites/BarraEnergiaProgress.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 38.497, 29.9692 )

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.438596, 1 )
colors = ColorArray( 0.886719, 0.836278, 0.0796661, 1, 0.804688, 0.511844, 0.0974426, 1, 0.996094, 0, 0, 0.565961 )

[sub_resource type="Animation" id=3]

resource/name = "Explotar"
length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:config/emitting")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ProgressBar:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 1.2 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "Reaparecer"
} ]
}

[sub_resource type="Animation" id=4]

length = 5.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ProgressBar:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]

resource/name = "idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ProgressBar:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="ColorRamp" id=6]

offsets = FloatArray( 0, 0.54386, 1 )
colors = ColorArray( 1, 0.867188, 0, 1, 0.882813, 0.448519, 0.0275879, 1, 0.167969, 0.000656128, 0.000656128, 0.565961 )

[node name="Recolectora" type="RigidBody2D" groups=[
"recolector",
]]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 2
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Adelante" type="Particles2D" parent="."]

transform/pos = Vector2( 0, 29 )
config/amount = 32
config/lifetime = 2.0
config/emitting = false
config/process_mode = 1
config/local_space = false
params/direction = 0.0
params/spread = 30.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 6.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( 0, -32 )

[node name="ProgressBar" type="TextureProgress" parent="."]

rect/rotation = 90.0
rect/scale = Vector2( 1, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -10.0
margin/top = 31.0
margin/right = 150.0
margin/bottom = 52.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
texture/under = ExtResource( 3 )
texture/over = null
texture/progress = ExtResource( 4 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Timer_Reaparicion" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Explotar = SubResource( 3 )
anims/Reaparecer = SubResource( 4 )
anims/idle = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="Explosion" type="Particles2D" parent="."]

config/amount = 40
config/lifetime = 2.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.1
params/direction = 180.0
params/spread = 360.0
params/linear_velocity = 50.0
params/spin_velocity = 999.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 14.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.4
randomness/final_size = 0.5
color/color = Color( 0.976563, 0.961602, 0.0190735, 1 )
color/color_ramp = SubResource( 6 )

[connection signal="body_enter" from="." to="." method="_on_Recolectora_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_Recolectora_body_exit"]

[connection signal="timeout" from="Timer_Reaparicion" to="." method="_on_Timer_Reaparicion_timeout"]


